--- a/articles/genomics/TOC.yml
+++ b/articles/genomics/TOC.yml
@@ -9,7 +9,7 @@
   items:
     - name: 运行示例基因组学工作流
       href: quickstart-run-genomics-workflow-portal.md
-- name: 操作方法指南
+- name: 操作指南
   items:
     - name: 使用各种输入文件格式
       items:
@@ -29,7 +29,7 @@
       href: troubleshooting-guide-genomics.md
     - name: 提出支持请求
       href: file-support-ticket-genomics.md
-    - name: 版本发行历史记录
+    - name: 版本发布历史记录
       href: version-release-history-genomics.md
     - name: 业务连续性
       href: business-continuity-genomics.md
